# primus_polygoni

./: .gitignore  Cargo.toml  LICENSE.md  README.md  compile.cmd  run.sh
samples/: results
samples/dynamic/1024_128/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/1024_16/: 1.csv  10.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/1024_256/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/128_256/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/128_512/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/16_1024/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/16_16/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/16_32/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/16_512/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/16_64/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/32_128/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/32_256/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
samples/dynamic/512_128/: 1.csv  10.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
src/: camera.rs  icosphere.rs  lib.rs  scene.rs  texture.rs
src/shader/: main.hlsl  main_150.glslf  main_150.glslv
(+174 files in other folders)
