[package]
name = "primus_polygoni"
version = "0.1.0"
authors = ["Thomas Koehler <basta.t.k+git@gmail.com>"]

[dependencies]
gfx = { git = "git://github.com/gfx-rs/gfx", rev = "606db695be7fee025b6278a7dfe759020b3c4eb3"}
gfx_window_glutin = { git = "git://github.com/gfx-rs/gfx", rev = "606db695be7fee025b6278a7dfe759020b3c4eb3"}
winit = "^0.5"
glutin = "^0.7"
nalgebra = "^0.11"
alga = "^0.5"
time = "^0.1"
rand = "^0.3"
noise = "^0.4"
image = "^0.12"
